force-app/main/default/objects/Hiring_Company__c/Hiring_Company__c.object-meta.xml
<CustomObject>
    <description>This describes a company as it is found on a job board.</description>
    <label>Hiring Company</label>
    <nameField>
        <label>Hiring Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hiring Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>