force-app/main/default/objects/Hiring_Company__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the account that this hiring company is associated with.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hiring Companies</relationshipLabel>
    <relationshipName>Hiring_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>