force-app/main/default/objects/Hiring_Company__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City of the hiring company.</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>