force-app/main/default/objects/Hiring_Company__c/fields/DataGroomr_Match_Confidence__c.field-meta.xml
<CustomField>
    <fullName>DataGroomr_Match_Confidence__c</fullName>
    <description>This is the match confidence DataGroomr came up with.</description>
    <inlineHelpText>This is the match confidence DataGroomr came up with.</inlineHelpText>
    <label>DataGroomr Match Confidence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>