force-app/main/default/objects/Hiring_Company__c/fields/DataGroomrMatchAccount__c.field-meta.xml
<CustomField>
    <fullName>DataGroomrMatchAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account that DataGroomr found the highest match confidence for.</description>
    <inlineHelpText>The Account that DataGroomr found the highest match confidence for.</inlineHelpText>
    <label>DataGroomr Match Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hiring Companies (DataGroomr Match Account)</relationshipLabel>
    <relationshipName>Hiring_Companies1</relationshipName>
    <type>Lookup</type>
</CustomField>