force-app/main/default/objects/Hiring_Company__c/fields/Job_Count__c.field-meta.xml
<CustomField>
    <fullName>Job_Count__c</fullName>
    <description>This is the number of jobs we&apos;ve recently seen for this unmatched company.</description>
    <inlineHelpText>This is the number of jobs we&apos;ve recently seen for this unmatched company.</inlineHelpText>
    <label>Job Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>