force-app/main/default/objects/Hiring_Company__c/fields/Overwrite_Match_Account__c.field-meta.xml
<CustomField>
    <fullName>Overwrite_Match_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field can be used to overwrite a DataGroomr Match.</description>
    <inlineHelpText>This field can be used to overwrite a DataGroomr Match.</inlineHelpText>
    <label>Overwrite Match Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hiring Companies (Overwrite Match Account)</relationshipLabel>
    <relationshipName>Hiring_Companies2</relationshipName>
    <type>Lookup</type>
</CustomField>