force-app/main/default/objects/Hiring_Company__c/fields/static_id__c.field-meta.xml
<CustomField>
    <fullName>static_id__c</fullName>
    <description>This is the uuid5 generated during the job parsing process.</description>
    <inlineHelpText>This is the uuid5 generated during the job parsing process.</inlineHelpText>
    <label>Static ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>