force-app/main/default/objects/Hiring_Company__c/fields/Street_and_Number__c.field-meta.xml
<CustomField>
    <fullName>Street_and_Number__c</fullName>
    <description>Street and number of the hiring company.</description>
    <inlineHelpText>Street and number of the hiring company.</inlineHelpText>
    <label>Street and Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>