force-app/main/default/objects/Hiring_Company__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Website parsed from the job description.</description>
    <inlineHelpText>Website parsed from the job description.</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>