force-app/main/default/objects/Hiring_Company__c/fields/ZIP_Code__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Code__c</fullName>
    <description>ZIP Code of the hiring company.</description>
    <inlineHelpText>ZIP Code of the hiring company.</inlineHelpText>
    <label>ZIP Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>